--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   </style>
 </head>
 <body>
+		<main>
 
   Equilibrium #3429
 
@@ -41,5 +42,15 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+		</main>
+		<!-- Equilibrium #3429 Our Equilibrium collection promotes balance and calm.
+		0.041 ETH 3 days left Creation of Jules Wyvern -->
+
+		<footer class="attribution">
+			Challenge by
+			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+				>Frontend Mentor</a
+			>. Coded by <a href="#">Your Name Here</a>.
+		</footer>
 </body>
 </html>
