--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
 </head>
 <body>
 		<main>
+			<section class="nft-card">
+				<img
+					src="./images/image-equilibrium.jpg"
+					alt="Equilibrium #3429"
+					class="nft-img"
+				/>
+				<div class="overlay">
+					<img
+						src="./images/icon-view.svg"
+						alt="Eye icon"
+						class="overlay-icon"
+					/>
+				</div>
 
   Equilibrium #3429
 
@@ -42,6 +55,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+			</section>
 		</main>
 		<!-- Equilibrium #3429 Our Equilibrium collection promotes balance and calm.
 		0.041 ETH 3 days left Creation of Jules Wyvern -->
