--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   </style>
 </head>
 <body>
-		<main>
-			<section class="nft-card">
+		<main class="nft-card">
+			<div class="img-container">
 				<img
 					src="./images/image-equilibrium.jpg"
 					alt="Equilibrium #3429"
@@ -55,16 +55,13 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
-			</section>
 		</main>
-		<!-- Equilibrium #3429 Our Equilibrium collection promotes balance and calm.
-		0.041 ETH 3 days left Creation of Jules Wyvern -->
 
-		<footer class="attribution">
+		<!-- <footer class="attribution">
 			Challenge by
 			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
 				>Frontend Mentor</a
 			>. Coded by <a href="#">Your Name Here</a>.
-		</footer>
+		</footer> -->
 </body>
 </html>
