heading area markup

--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
 						class="overlay-icon"
 					/>
 				</div>
+			</div>
 
-  Equilibrium #3429
-
+			<h1 class="nft-heading"><a href="#">Equilibrium #3429</a></h1>
+			<p class="nft-subheading">
   Our Equilibrium collection promotes balance and calm.
+			</p>
 
   0.041 ETH
   3 days left
