nft cost & time left markup

--- a/index.html
+++ b/index.html
@@ -48,8 +48,20 @@
   Our Equilibrium collection promotes balance and calm.
 			</p>
 
-  0.041 ETH
-  3 days left
+			<div class="nft-info">
+				<div class="nft-cost">
+					<img
+						src="./images/icon-ethereum.svg"
+						aria-hidden="true"
+						class="icon"
+					/>
+					<span>0.041 ETH</span>
+				</div>
+				<div class="nft-time">
+					<img src="./images/icon-clock.svg" aria-hidden="true" class="icon" />
+					<span>3 days left</span>
+				</div>
+			</div>
   
   Creation of Jules Wyvern
 
