--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				</div>
 			</div>
   
-  Creation of Jules Wyvern
+			<hr class="divider" />
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
