author markup & styling

--- a/index.html
+++ b/index.html
@@ -65,9 +65,15 @@
   
 			<hr class="divider" />
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+			<div class="nft-author">
+				<img
+					src="./images/image-avatar.png"
+					alt="Jules Wyvern"
+					class="author-img"
+				/>
+				<span class="author-info"
+					>Creation of <a href="#" class="author-link">Jules Wyvern</a></span
+				>
   </div>
 		</main>
 
