--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<!-- displays site properly based on user's device -->
@@ -12,11 +12,11 @@
 			sizes="32x32"
 			href="./images/favicon-32x32.png"
 		/>
-  
-  <title>Frontend Mentor | NFT preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
+		<title>Frontend Mentor | NFT preview card component</title>
+
+		<!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+		<style>
 			.attribution {
 				font-size: 11px;
 				text-align: center;
@@ -24,9 +24,9 @@
 			.attribution a {
 				color: hsl(228, 45%, 44%);
 			}
-  </style>
-</head>
-<body>
+		</style>
+	</head>
+	<body>
 		<main class="nft-card">
 			<div class="img-container">
 				<img
@@ -37,7 +37,7 @@
 				<div class="overlay">
 					<img
 						src="./images/icon-view.svg"
-						alt="Eye icon"
+						aria-hidden="true"
 						class="overlay-icon"
 					/>
 				</div>
@@ -45,7 +45,7 @@
 
 			<h1 class="nft-heading"><a href="#">Equilibrium #3429</a></h1>
 			<p class="nft-subheading">
-  Our Equilibrium collection promotes balance and calm.
+				Our Equilibrium collection promotes balance and calm.
 			</p>
 
 			<div class="nft-info">
@@ -62,7 +62,7 @@
 					<span>3 days left</span>
 				</div>
 			</div>
-  
+
 			<hr class="divider" />
 
 			<div class="nft-author">
@@ -74,7 +74,7 @@
 				<span class="author-info"
 					>Creation of <a href="#" class="author-link">Jules Wyvern</a></span
 				>
-  </div>
+			</div>
 		</main>
 
 		<!-- <footer class="attribution">
@@ -83,5 +83,5 @@
 				>Frontend Mentor</a
 			>. Coded by <a href="#">Your Name Here</a>.
 		</footer> -->
-</body>
+	</body>
 </html>
