--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 					<img
 						src="./images/icon-view.svg"
 						aria-hidden="true"
+						alt=""
 						class="overlay-icon"
 					/>
 				</div>
@@ -42,12 +43,18 @@
 					<img
 						src="./images/icon-ethereum.svg"
 						aria-hidden="true"
+						alt=""
 						class="icon"
 					/>
 					<span>0.041 ETH</span>
 				</div>
 				<div class="nft-time">
-					<img src="./images/icon-clock.svg" aria-hidden="true" class="icon" />
+					<img
+						src="./images/icon-clock.svg"
+						aria-hidden="true"
+						alt=""
+						class="icon"
+					/>
 					<span>3 days left</span>
 				</div>
 			</div>
